// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WorkLock /> should render correctly 1`] = `
<DocumentFragment>
  <form
    class="w-100"
  >
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-md-3 offset-md-1"
        for="bid-value"
      >
        ETH amount
      </label>
      <div
        class="col-md-6"
      >
        <input
          class="form-control form-control-bg"
          id="bid-value"
          name="bidValue"
          type="text"
          value="0"
        />
        <div
          class="invalid-feedback"
          style="display: none;"
        />
      </div>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Bid
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<WorkLock /> should validate input from user correctly 1`] = `
<DocumentFragment>
  <form
    class="w-100"
  >
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-md-3 offset-md-1"
        for="bid-value"
      >
        ETH amount
      </label>
      <div
        class="col-md-6"
      >
        <input
          class="form-control form-control-bg"
          id="bid-value"
          name="bidValue"
          type="text"
          value=""
        />
        <div
          class="invalid-feedback"
          style="display: inline;"
        >
          Field is required.
        </div>
      </div>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Bid
      </button>
    </div>
  </form>
</DocumentFragment>
`;
